# add_subdirectory(nuclear_demo)
# add_subdirectory(fluid_config_demo)
# add_subdirectory(fluid_dynamic_demo)
# add_subdirectory(fluid_simulate_demo)
# add_subdirectory(splash_demo)
# add_subdirectory(rigid_float_demo)
# add_subdirectory(scour_demo)
# add_subdirectory(gas_config_demo)
# add_subdirectory(gas_dynamic_demo)
# add_subdirectory(biochemistry_demo)
# add_subdirectory(dissipate_demo)
# add_subdirectory(fire_smoke_demo)
# add_subdirectory(explode_smoke_demo)
# add_subdirectory(exhaust_demo)
# add_subdirectory(dust_demo)
# add_subdirectory(smoke_render_demo)
add_subdirectory(smoke_rigid_demo)
# add_subdirectory(smoke_air_demo)
# add_subdirectory(fluid_performance_demo)
# add_subdirectory(gas_performance_demo)